# wingai-app

./: .dockerignore  README.md  docker-compose.yml  index.html  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/wings/: __init__.py  image_preprocess.py  utils.py
backend/wings/modeling/: litnet.py  loss.py  models.py  unet.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  utils.tsx
frontend/src/components/: DetectionModelPanel.tsx  HelpPanel.tsx  ImagePreviewModal.tsx  UploadImages.tsx
frontend/src/utils/: yoloDetector.ts
src/: App.tsx  utils.tsx
src/components/: ImagePreviewModal.tsx  ReviewImages.tsx  UploadImages.tsx
wings/: config.py  gpa.py  image_preprocess.py
wings/modeling/: loss.py
